--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,6 +1,11 @@
-body {
+body,
+form {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
