--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Mail Service</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %> typescript Heroku</p>
-    <form action="users/login" method="post">
-      <input type="text" name="id" id="" />
-      <input type="text" name="pwd" id="" />
-      <input type="submit" name="" id="" value="login" />
-    </form>
+    <header>
+      <h1>Mail Service</h1>
+    </header>
+    <h3>Welcome to Mail Service</h3>
+    <main>
+      <form action="users/login" method="post">
+        <input type="text" name="id" id="" placeholder="ID" />
+        <input type="text" name="pwd" id="" placeholder="PASSWORD" />
+        <input type="submit" name="" id="" value="login" />
+      </form>
+    </main>
+    <script src="/js/index.js"></script>
   </body>
-  <script>
-    const _onSubmit = (e) => {
-      e.preventDefault();
-      alert("aaa");
-    };
-  </script>
 </html>
